# nextperm

./: CMakeLists.txt  README.md  makefile  nextperm.c  nextperm.h  nextperm_test.c  permn.c  permn.h  permn_test.c
